--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
    <script src="https://kit.fontawesome.com/8b6a10b4d8.js" crossorigin="anonymous"></script>
     <title>React Weather App</title>
   </head>
